# BetterSerialPlotter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bsp_tester/: bsp_tester.ino
icon/: BSP_Logo.afdesign  BSP_Logo.icns  BSP_icon.rc  untitled.afdesign
include/BetterSerialPlotter/: BSP.hpp  DataPanel.hpp  Plot.hpp  PlotInfo.hpp  PlotMonitor.hpp  SerialManager.hpp  SerialMonitor.hpp  Serialization.hpp  Utility.hpp  Widget.hpp
src/: main.cpp
src/BetterSerialPlotter/: BSP.cpp  DataPanel.cpp  Plot.cpp  PlotMonitor.cpp  SerialManager.cpp  SerialMonitor.cpp  Serialization.cpp  Utility.cpp  Widget.cpp
test/: CMakeLists.txt  comport_detect.cpp  line_parse_test.cpp  serialize_test.cpp
